--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Se Soucier Academy - Professional training for domestic services.">
   <title>Se Soucier Academy</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="/css/styles">
   <link rel="icon" type="image/png" href="/images/logo.png">
 </head>
 <body>
