--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Se Soucier Academy - Professional training for domestic services.">
   <title>Se Soucier Academy</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/css/styles">
+  <link rel="stylesheet" href="/css/styles.css">
   <link rel="icon" type="image/png" href="/images/logo.png">
 </head>
 <body>
@@ -74,6 +74,6 @@
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.7/dist/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="/js/scripts"></script>
+  <script src="/js/scripts.js"></script>
 </body>
 </html>
